<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_view_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/v_1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@mipmap/ic_launcher"
                    android:clickable="true"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v1" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/v_2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@mipmap/ic_launcher"
                    android:clickable="false"
                    android:drawingCacheQuality="low"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v2" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/v_3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@mipmap/ic_launcher"
                    android:clickable="false"
                    android:contentDescription="@string/errorCodeInfo"
                    android:drawingCacheQuality="high"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v3" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/v_4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@mipmap/ic_launcher"
                    android:clickable="false"
                    android:contentDescription="v_4"
                    android:drawingCacheQuality="auto"
                    android:onClick="onClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v4" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/finger_memo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_tou_halftou"
                android:minHeight="44dp">

                <TextView
                    android:id="@+id/txt_finger_memo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:duplicateParentState="false"
                    android:includeFontPadding="false"
                    android:minWidth="74dp"
                    android:text="v5"
                    android:textColor="#e60505"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_finger_memo_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:duplicateParentState="true"
                    android:includeFontPadding="false"
                    android:background="@drawable/selector_white_black"
                    android:text="@string/v5"
                    android:textColor="#131212"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
